src/styles/Posts.css
.page-message-container {
	display: flex;
	height: 100vh;
  font-size: 2rem;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.page-message-container > div {
	margin: 15px 0;
}

.page-message-container a {
	color: steelblue;
	cursor: pointer;
}

.section-header {
  font-size: 1.5rem;
  font-weight: 500;
	display: flex;
	align-items: center;
	justify-content: space-between;
	color: var(--color-main);
}

.section-header .breadcrumbs {
	display: flex;
	flex-wrap: wrap;
}

.section-header .thread-label {
  font-weight: 500;
  margin-right: 8px;
  text-decoration: none;
  color: var(--color-main);
}

.section-header a.thread-label:hover {
  opacity: 0.8;
}

.section-header .title-caret {
  font-weight: 500;
  margin-right: 8px;
}

.section-header .thread-title {
	font-weight: 400;
}

.forum-list-container,
.thread-list-container {
    margin: 30px auto;
    width: 90%;
    max-width: 400px;
}

@media only screen and (min-width: 768px) {
	.forum-list-container,
	.thread-list-container {
	    max-width: 800px;
	}
}

.forum-row,
.thread-row,
.post-container {
  width: 100%;
  border: 1px solid var(--color-highlight);
  border-radius: 4px;
  padding: 5px;
  margin: 8px 0;
  box-sizing: border-box;
  background-color: white;
}

.forum-row,
.thread-row {
  display: flex;
  justify-content: space-between;
}

.forum-row {
  align-items: center;
}

.thread-row {
	align-items: flex-start;
}

.thread-row.thread-unread {
	box-shadow: inset 0 0 0 1px var(--color-highlight);
}

.forum-row .forum-title {
	display: flex;
	align-items: center;
	font-size: 1.2em;
	font-weight: 500;
	min-width: 200px;
}

@media only screen and (min-width: 768px) {
	.forum-row .forum-title {
		min-width: 300px;
	}
}

.post-container.editing {
	background-color: var(--color-light);
}

.post-container.disabled {
	opacity: 0.5;
}

.post-edited {
	font-size: 0.875rem;
	margin: 0px 5px 10px 5px;
}

.post-edited span:not(:first-child) {
	margin-left: 5px;
}

.post-edited .edit-data {
	color: var(--color-ok);
	font-weight: 500;
}

a.forum-row,
a.thread-row {
	display: flex;
	justify-content: space-between;
  display: flex;
  text-decoration: none;
  color: #333;
}

a.forum-row:hover,
a.thread-row:hover {
	box-shadow: inset 0 0 0 100px rgba(200, 200, 200, 0.2);
}

.thread-row .thread-title {
	margin-top: 2px;
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
}

@media only screen and (min-width: 768px) {
	.thread-row .thread-title {
		align-items: center;
	}
}

.thread-row .thread-title span {
	font-size: .8rem;
	margin: 0 2px;
}

.thread-row .thread-title .title-container {
	display: flex;
	align-items: center;
}

.thread-row .thread-title .icon {
	margin-right: 5px;
}

.thread-row .thread-title .title-text {
	font-size: 1rem;
	font-weight: 500;
}

.thread-row .thread-meta {
	font-size: .8rem;
	padding-top: 3px;
}

.forum-row .forum-meta {
	font-size: 1rem;
}

.forum-row .forum-meta span,
.thread-row .thread-meta span {
	margin: 0 2px;
	display: block;
}

@media only screen and (min-width: 768px) {
	.forum-row .forum-meta span,
	.thread-row .thread-meta span {
		margin: 0 2px;
		display: inline;
	}
}

.forum-row .info,
.thread-row .info {
	color: var(--color-main);
	font-weight: 500;
}

.forum-row .loader,
.thread-row .loader,
.post-container .loader {
  display: block;
  margin: auto;
}

.title-input {
    width: 100%;
    max-width: 800px;
    height: 30px;
    resize: none;
    padding: 10px;
    box-sizing: border-box;
    font-size: 0.9rem;
}

.form-line {
  margin: 10px 0;
}

.form-line label {
  font-weight: 500;
  display: block;
  margin-bottom: 3px;
}

.post-list-container {
  margin: 30px auto;
  width: 90%;
  max-width: 800px;
}

.post-container .post-header {
	display: flex;
	justify-content: space-between;
	border-bottom: 1px solid var(--color-light);
	padding: 5px;
}

.post-container .post-header .post-user {
	font-weight: 500;
}

.post-container .post-header .post-date {
	font-weight: 400;
	font-size: 0.9rem;
}

.post-container .post-footer {
	border-top: 1px solid var(--color-light);
	padding: 5px 5px 0 5px;
	display: flex;
	justify-content: flex-end;
}

.post-container .post-footer button:not(:last-child) {
	margin-right: 10px;
}

.post-content {
	padding: 15px 5px;
	color: #555;
}

.post-line {
    min-height: 20px;
    margin: 4px;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
}

.post-field-label {
    font-weight: 500;
    width: 100px;
    text-align: left;
}

.new-post-container {
	margin-top: 20px;
	padding-top: 10px;
	border-top: 2px solid var(--color-main);
}

.content-line {
	min-height: 10px;
  margin: 0;
  text-align: left;
}

.content-input {
    width: 100%;
    max-width: 800px;
    height: 200px;
    resize: none;
    padding: 10px;
    box-sizing: border-box;
    font-size: 0.9rem;
}

